--- a/html/calculator/calculator.html
+++ b/html/calculator/calculator.html
@@ -3,44 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <style type="text/css">
-    *{
-      padding: 0;
-      margin: 0px;
-    }
-    .num{
-      font-size: 45px;
-      width: 45px
-      height:40px;
-      font-weight: bold;
-      border: solid 1px blue;
-      color: red;
-    }
-    .num:hover{
-      background: red;
-    }
+  <link rel="stylesheet" type="text/css" href="calculator.css">
 
-  </style>
-  <script type="text/javascript">
-    function calculate(){
-      var result = "";
+<script src="calculator.js"> </script>
 
-      var finalresult = "";
-
-      result+=event.srcElement.innerText;
-
-      display.innerText=result;
-
-    }
-
-    function calculateresult(){
-
-      finalresult=eval(result);
-
-      display.innerText=finalresult;
-
-    }
-  </script>
 </head>
 <body>
   <table onclick="calculate()">
@@ -52,14 +18,13 @@
       <td class="num">2</td>
       <td class="num">3</td>
       <td class="num">+</td>
-      <td class="num">c</td>
+      <td class="num" rowspan="5">c</td>
     </tr>
     <tr>
       <td class="num">4</td>
       <td class="num">5</td>
       <td class="num">6</td>
       <td class="num">-</td>
-      <td class="num" rowspan="3" onclick="calculateresult">=</td>
     </tr>
     <tr>
       <td class="num">7</td>
@@ -74,5 +39,8 @@
       <td class="num">/</td>
     </tr>
   </table>
+
+ </p><button id = "evaluate" onclick="calculateresult()"> =</button></p>
+
 </body>
 </html>
