--- a/html/calculator/original.html
+++ b/html/calculator/original.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="calculator.css">
-<script src="calculator.js"> </script>
   <title></title>
+  <style type="text/css">
+    *{
+      padding: 0;
+      margin: 0px;
+    }
+    .num{
+      font-size: 45px;
+      width: 45px
+      height:40px;
+      font-weight: bold;
+      border: solid 1px blue;
+      color: red;
+    }
+    .num:hover{
+      background: red;
+    }
+
+  </style>
+  <script type="text/javascript">
+    function calculate(){
+      var result = "";
+
+      var finalresult = "";
+
+      result+=event.srcElement.innerText;
+
+      display.innerText=result;
+
+    }
+
+    function calculateresult(){
+
+      finalresult=eval(result);
+
+      display.innerText=finalresult;
+
+    }
+  </script>
 </head>
 <body>
   <table onclick="calculate()">
@@ -24,7 +59,7 @@
       <td class="num">5</td>
       <td class="num">6</td>
       <td class="num">-</td>
-      <td class="num" rowspan="3" onclick="calculateresult()">=</td>
+      <td class="num" rowspan="3" onclick="calculateresult">=</td>
     </tr>
     <tr>
       <td class="num">7</td>
